--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Rijk's Pagina</title>
-    </head>
+  </head>
   <body>
     <h1>Hello there, welkom op mijn site</h1>
-    <img scr="https://mijnwebsite.rijkveenendaal.repl.co/static/IMG_7203.jpg">
+    <img scr="https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg" height="320", width="420">
+    <h2>Rijk</h2>
+    <button>Contact</button>
   </body>
 </html>
