--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 
 </head>
     <body>
+      {% include 'nav.html' %}
       <div class="container">
       
     <h1 class="text-center mt-4">Hoi</h1>
@@ -19,16 +20,20 @@
     <h2 class="text-center">
        test
     </h2>
+          <div>
       <p>
          GitHub is a platform for sharing and collaborating on software development projects which is powered by a version control system git. We can begin by heading to GitHub and creating a new repository.
       </p>
+            <img scr='static/images/office.webp' style='height:320px;'>
+          </div>
    </div>
-      <h2 class="text-center">Open positions</h2>
+      <h2 class="text-center">Job Openings</h2>
         {% for job in jobs  %} 
           {% include 'jobitem.html' %}
         {% endfor %}
        <div class="text-center">
          <button class="btn btn-primary btn-lg">Contact Us</button>
          <p>Copyright Rijk</p>
+         {% include 'footer.html' %}
   </body>
 </html>
