--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -6,7 +6,7 @@
         <div><b>Salary: </b>{{ job['salary']}}</div>
     {% endif %}
    </div>
-   <div class="col-2">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+   <div class="col-2 padding-right:16px">
+        <a href="mailto:rijkveenendaal@gmail.com?subject=Application%20for%20{{ job['title']}}&body=Mijn%20naam%3A%0D%0A%0D%0AMijn%20Interesse%3A%0D%0A%0D%0AMijn%20telefoonnummer%3A" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
  </div>
