finish are site

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
           {% include 'jobitem.html' %}
         {% endfor %}
        <div class="text-center">
-         <button class="btn btn-primary btn-lg">Contact Us</button>
+         <a class="btn btn-primary btn-lg" href="mailto:rijkveenendaal@gmail.com?subject=Contact%20from%20the%20website&body=My%20Name%3A%0D%0A%0D%0AMy%20Message%3A">Contact Us</a>
          <p>Copyright Rijk</p>
          {% include 'footer.html' %}
   </body>
